--- a/ProyectAudi/appsettings.json
+++ b/ProyectAudi/appsettings.json
@@ -8,5 +8,19 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=SISA;Trusted_Connection=True;Encrypt=False;"
+  },
+
+  //"AllowedHosts": "*",
+  
+  //  "DefaultConnection": "workstation id=DB_SISA.mssql.somee.com;packet size=4096;user id=batman_SQLLogin_1;pwd=nprlpj6skm;data source=DB_SISA.mssql.somee.com;persist security info=False;initial catalog=DB_SISA;TrustServerCertificate=True;",
+  
+
+    "EmailSettings": {
+      "Host": "smtp.gmail.com",
+      "Port": 587,
+      "EnableSsl": true,
+      "User": "miguelto8989@gmail.com",
+      "Password": "pkmr ccmg yrry doyl"
+    }
+
   }
-}
